# threeeye

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  IMPLEMENTATION.md  readme.md
.github/workflows/: build.yml  ci.yml  deploy.yml
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: alerts.py  auth.py  compliance.py  consortium.py  dashboard.py  reports.py  risk_trends.py  router.py  vendors.py  websocket.py  workflows.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/engine/llm/: playbook_generator.py  provider.py  report_narrator.py  signal_parser.py
backend/app/engine/llm/prompts/: playbook.py  report.py  signal_parse.py
backend/app/engine/ml/: altman_zscore.py  correlation_engine.py  feature_builder.py  model_registry.py  scorer.py
backend/app/engine/ml/training/: train_dimension.py
backend/app/engine/rules/: base_rule.py  cert_in.py  dpdp.py  engine.py  rbi_cybersecurity.py  rbi_outsourcing.py  sebi_mca.py
backend/app/ingest/: dispatcher.py  normalizer.py
backend/app/ingest/connectors/: base.py  cert_in.py  cve_nvd.py  dark_web_stub.py  hibp.py  mca21.py  news_feed.py  rbi_enforcement.py  shodan.py
backend/app/models/: __init__.py  alert.py  compliance.py  consortium.py  report.py  risk_trend.py  score_audit_log.py  signal.py  user.py  vendor.py  workflow.py
backend/app/schemas/: alert.py  auth.py  compliance.py  consortium.py  dashboard.py  report.py  vendor.py  workflow.py
backend/app/services/: scoring_service.py  vendor_service.py
backend/app/workers/: alert_tasks.py  celery_app.py  ingest_tasks.py  score_tasks.py
backend/migrations/: env.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_altman.py  test_correlation.py  test_rules.py  test_scoring.py
backend/tests/api/: test_alerts.py  test_auth.py  test_dashboard.py  test_vendors.py  test_workflows.py
backend/tests/integration/: test_cert_in_clock.py  test_signal_pipeline.py
backend/tests/unit/: test_altman.py  test_correlation.py  test_rule_engine.py  test_scoring.py  test_signal_parser.py
backend/tests/unit/test_rules/: test_cert_in.py  test_dpdp.py  test_rbi.py
blockchain/: .env.example  hardhat.config.js  package.json
blockchain/contracts/: RiskConsortium.sol
blockchain/scripts/: broadcast_test.js  deploy.js
deploy/helm/: Chart.yaml  values-production.yaml  values-staging.yaml  values.yaml
deploy/helm/templates/: backend-hpa.yaml  (+9 more)
mcp-server/: .env.example  blockchain.py  requirements.txt  server.py  zeroG.py
