[project]
name = "thirdeye-backend"
version = "0.1.0"
description = "Third Eye — AI-Powered Vendor Risk Intelligence Platform Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.0,<4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.9",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]
ai = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
# Prompt templates contain intentionally long strings
"app/engine/llm/prompts/*" = ["E501"]
# Tests allow longer assertion messages
"tests/*" = ["E501"]
# ML code uses uppercase X/X_train by sklearn/numpy convention
"app/engine/ml/scorer.py" = ["N806", "N803"]
"app/engine/ml/training/*" = ["N806", "N803"]
# Pydantic schemas use camelCase field names to match frontend JSON API format
"app/schemas/*" = ["N815"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
